<resources>
    <string name="app_name" translatable="false">&appname;</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN" translatable="false">b3d6b246db287885b9e1f42db244dfb1</string>
    <string name="ak_login_protocol_scheme" translatable="false">790103201152072</string>
    <string name="facebook_key" translatable="false">"790103201152072"</string>
    <string name="facebook_provider" translatable="false">"com.facebook.app.FacebookContentProvider790103201152072"</string>
    <string name="google_maps_key" translatable="false">AIzaSyDq6N_AZBav7KlBiWR7l0eNmw6e3rari9A</string>
    <string name="package_driver" translatable="false">"com.trioangle.goferdriver"</string>
    <string name="google_client_id" translatable="false">239640610908-athcqac8ptlfupuu41vkb093qfd58tfs.apps.googleusercontent.com</string>
    <string name="use_in_case_of_emergency">Use In Case of emergency</string>
    <string name="payment_name">"&appname; Payment"</string>
    <string name="getmoving">Get moving with &appname;</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="mobileenterhint">Enter your mobile \nnumber</string>
    <string name="connectsocila">Or connect with social</string>
    <string name="phonenumber">Phone Number</string>
    <string name="getmobilenumber">Enter your mobile number</string>
    <string name="chooseaccount">Choose an account</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="alert_your_emergency_contacts">Alert your Emergency Contacts</string>
    <string name="welcomeback">Welcome back, sign in to continue</string>
    <string name="forgotpassword">I forgot my password</string>
    <string name="resetpasswords">Reset your password</string>
    <string name="creatacount">Create an Account</string>
    <string name="soscontent">&appname; collects location data during an active booking from your device to ensure a
        safe and smooth ride experience
    </string>
    <string name="close">CLOSE</string>
    <string name="continue_alert">Continue</string>
    <string name="continue_to_send_alert">Continue to send alert?</string>
    <string name="sucessmessfe">Messege Sent Successfully</string>
    <string name="messagesenttoadmin">Message Successfully Sent to Admin</string>
    <string name="enteremailadress">Enter the email address you used to register</string>
    <string name="car_unavailable">"Unfortunately, &appname; is currently unavailable in your area."
    </string>
    <string name="email">EMAIL</string>
    <string name="cancel">CANCEL</string>
    <string name="editaccount">Edit Account</string>
    <string name="textpayment">Payment</string>
    <string name="paypal_payment">PayPal</string>
    <string name="addpayment">Add Payment</string>
    <string name="helptitle">Help</string>
    <string name="capacity">Capacity</string>
    <string name="fare">Fare</string>
    <string name="done">DONE</string>
    <string name="continues">"CONTINUE"</string>
    <string name="pricepresented">Your fare will be the price presented before the trip or based on the rates below and
        other applicable surcharges and adjustments.
    </string>
    <string name="basefare">Base Fare</string>
    <string name="perminute">+ Per Minute</string>
    <string name="perkm">+ Per km</string>
    <string name="requestuber">"REQUEST "</string>
    <string name="amountno7">$53.00</string>
    <string name="ubergo">&appname;Go</string>
    <string name="cancel_your_trip">"CANCEL YOUR TRIP"</string>
    <string name="paymentmethods">Payment Methods</string>
    <string name="cash">Cash</string>
    <string name="wallets">Wallet</string>
    <string name="promotions">Promotions</string>
    <string name="add">"Add"</string>
    <string name="add_promo">"Add Promo/Gift Code"</string>
    <string name="free_trip">Free trip up to</string>
    <string name="from">from</string>
    <string name="off">OFF</string>
    <string name="promo_applied">Promo Applied</string>
    <string name="enter_promo_code">"Enter your promo/gift code"</string>
    <string name="wallet">Wallet</string>
    <string name="use_wallet">Use Wallet</string>
    <string name="wallet_amount">Your Wallet amount is</string>
    <string name="add_amount">Add Amount</string>
    <string name="payable_amount">"Payable Amount"</string>
    <string name="paid_amount">"Paid Amount"</string>
    <string name="enter_amount">Enter the amount</string>
    <string name="add_money">"Add money to the wallet</string>
    <string name="pay">Pay</string>
    <string name="trip_id">Trip Id :</string>
    <string name="proceed">Proceed</string>
    <string name="waitfordriver">Waiting for driver confirmation</string>
    <string name="gladepay">GladePay</string>
    <string name="credit_or_debit_card">Add Credit or Debit Card</string>
    <string name="change_credit_or_debit_card">Change Credit or Debit Card</string>
    <string name="card">Card</string>
    <string name="save">save</string>
    <string name="baseFare">Base Fare</string>
    <string name="currency">"Currency"</string>
    <string name="usd">"USD ($)"</string>
    <string name="selectcurrency">"Select Currency"</string>
    <string name="signOut">Sign Out</string>
    <string name="tripDetails">Trip Details</string>
    <string name="fordFiesta">Ford Fiesta</string>
    <string name="FordFiesta">Ford Fiesta</string>
    <string name="nameexamplecom">name@example.com</string>
    <string name="YourTrips">Your Trips</string>
    <string name="address">6,Elliots Promenade odaimanagar,Besant Nagar,Chennai,Tamil Nadu 600090,India</string>
    <string name="request_car_msg">"Contacting</string>
    <string name="request_car_msg1">" near you&#8230;</string>
    <string name="favorites">Favorites</string>
    <string name="addhome">Add Home</string>
    <string name="addwork">Add Work</string>
    <string name="home">"Home</string>
    <string name="work">"Work"</string>
    <string name="events">Events</string>
    <string name="signout_msg">"Are you sure you want to sign out?"</string>
    <string name="cancel_s">"Cancel"</string>
    <string name="signout">"Sign Out"</string>
    <string name="accountsetting">Account Settings</string>
    <string name="enter4digit">Enter the 4-digit code sent to you at</string>
    <string name="resend">Resend Code</string>
    <string name="affordable">Affordable,everyday rides</string>
    <string name="otp_emty">"Please enter the OTP"</string>
    <string name="tripsreview">Trips and Fare Review</string>
    <string name="accountpayment">Account and Payment Options</string>
    <string name="guideuber">A Guide to &appname;</string>
    <string name="signingup">Signing Up</string>
    <string name="more">More</string>
    <string name="accessibility">Accessibility</string>
    <string name="additionaltopics">Additional topics</string>
    <string name="farebreakdown">Fare Breakdown</string>
    <string name="farediscribction">The fare will be the price presented upon booking, or, if the journey changes, the
        fare will be based on the rates provided.Tap fare for details.
    </string>
    <string name="payment">Payment</string>
    <string name="yourtrips">Your Trips</string>
    <string name="begin_trip">"Begin Trip"</string>
    <string name="Rating">Rating</string>
    <string name="completed">Completed</string>
    <string name="Cancelled">Cancelled</string>
    <string name="end_trip">"End Trip"</string>
    <string name="scheduled">"Scheduled"</string>
    <string name="not_now">NOT NOW</string>
    <string name="camera_permission_description">To capture photos and videos, allow &appname; to access your camera and
        storage
    </string>
    <string name="storage_permission_description">To upload profile image &appname; to access your storage</string>
    <string name="location_permission_description">To request your ride, allow &appname; to access your device
        location
    </string>
    <string name="contacts_permission_description">To add emergency contacts, allow &appname; to access your contacts
    </string>
    <string name="settings">Settings</string>
    <string name="drivewithuber">Drive With &appname;</string>
    <string name="legal">Legal</string>
    <string name="whereto">Where to?</string>
    <string name="pickuplocation">"Pickup Location"</string>
    <string name="currentlocation">"Current Location"</string>
    <string name="setlocationonmap">"Set location on map"</string>
    <string name="scheduleride">"Schedule a Ride"</string>
    <string name="contact_C">"CONTACT"</string>
    <string name="contact">"Contact"</string>
    <string name="call">"Call"</string>
    <string name="callsonly">"CALLS ONLY"</string>
    <string name="arrival">"1:51pm arrival"</string>
    <string name="sharestatus">"Share Status"</string>
    <string name="ratetext">"$79.76"</string>
    <string name="mastercard">"MasterCard 2930"</string>
    <string name="restaurantdelights">"Restaurant delights"</string>
    <string name="uberittowangs">"Uber it to Wangs"</string>
    <string name="enrote">"En Route"</string>
    <string name="mins">"mins"</string>
    <string name="min">"mins"</string>
    <string name="yourcurrenttrip">"Your current trip"</string>
    <string name="change">"Change"</string>
    <string name="notrip">"You have no trip"</string>
    <string name="whatisyourname">"What's your name?"</string>
    <string name="confirmyourinformation">"Confirm your information"</string>
    <string name="first">"First Name"</string>
    <string name="last">"Last Name"</string>
    <string name="email_s">"Email"</string>
    <string name="password">Password</string>
    <string name="mobile_s">"Mobile Number"</string>
    <string name="sigin_terms1">"By continuing, I confirm that I have read and agree to the "</string>
    <string name="sigin_terms2">"Terms &amp; Conditions"</string>
    <string name="sigin_terms3">" and "</string>
    <string name="sigin_terms4">"Privacy Policy"</string>
    <string name="cancelaccount_title">"Cancel account creation?"</string>
    <string name="cancelaccount_msg">"Your information will not be saved."</string>
    <string name="confirm">"CONFIRM"</string>
    <string name="your_ride_with">"Your ride with"</string>
    <string name="cancelaccouunt_bottom">"To cancel account creation"</string>
    <string name="error_msg_firstname">"Please enter your first name"</string>
    <string name="error_msg_lastname">"Please enter your last name"</string>
    <string name="error_msg_email">"Please enter a valid email address"</string>
    <string name="error_msg_phone">"Please enter a valid mobile number"</string>
    <string name="error_msg_password">"Please enter minimum 6 characters"</string>
    <string name="error_msg_rating">"Please give your rating"</string>
    <string name="otp_mismatch">"OTP code Mismatch."</string>
    <string name="InvalidMobileNumber">Invalid mobile number</string>
    <string name="InvalidPassword">Please enter minimum 6 characters</string>
    <string name="Passwordmismatch">Password Mismatch</string>
    <string name="font_UBERBook" translatable="false">"ClanProForUBER-Book"</string>
    <string name="font_UBERMedium" translatable="false">"ClanProForUBER-Medium"</string>
    <string name="font_UBERNews" translatable="false">"ClanProForUBER-News"</string>
    <string name="sorry_no_rides">Sorry, no rides available now</string>
    <string name="try_again">try again</string>
    <string name="ok">OK</string>
    <string name="yourtripcancelledbydriver">Your trip cancelled by driver&#8230;</string>
    <string name="layout_direction">0</string>
    <string name="message">Message</string>
    <string name="call_admin">Call %s</string>
    <string name="contact_admin_for_manual_booking">Contact admin for manual booking</string>
</resources>