<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:background="@color/white"
    android:layoutDirection="@string/layout_direction"
    tools:context="com.trioangle.gofer.helper.CommonDialog">


    <com.trioangle.gofer.custompalette.FontTextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/yourtripcancelledbydriver"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20dp"
        app:fontName="@string/font_UBERBook" />

    <com.trioangle.gofer.custompalette.FontButton
        android:id="@+id/ok_btn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/message"
        android:layout_below="@+id/message"
        android:layout_marginBottom="10dp"
        android:background="@color/transparent"
        android:layoutDirection="@string/layout_direction"

        android:text="@string/ok"
        app:fontName="@string/font_UBERNews" />
</RelativeLayout>
