<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_corner_draw_emergency"
    android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="15dp">

        <com.trioangle.gofer.custompalette.FontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:paddingTop="15dp"
                android:text="@string/continue_to_send_alert"
                android:textColor="@color/text_black"
                android:textSize="18dp"
                app:fontName="@string/font_UBERMedium" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/d_topbordor"
                android:divider="@drawable/divider"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:showDividers="middle"
                android:weightSum="2">

            <com.trioangle.gofer.custompalette.FontTextView
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/cancel_s"
                    android:textAlignment="center"
                    android:textColor="@color/text_black"
                    android:textSize="18dp"
                    app:fontName="@string/font_UBERNews" />

            <com.trioangle.gofer.custompalette.FontTextView
                    android:id="@+id/continuebutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/continue_alert"
                    android:textAlignment="center"
                    android:textColor="@color/red_text_color"
                    android:textSize="18dp"
                    app:fontName="@string/font_UBERNews" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>